<resources>
    <string name="app_name">BaseballUI</string>
    <string name="title_activity_splash">BaseballUI</string>
    <string name="welcome">Bienvenido</string>
    <string name="slide_intro_enjoy">Disfruta</string>
    <string name="slide_intro_social">Red Social</string>
    <string name="slide_intro_welcome_description">a la mejor App de Baseball</string>
    <string name="slide_intro_enjoy_description">de resultados en tiempo real</string>
    <string name="slide_intro_social_description">con tus jugadores favoritos</string>
    <string name="slide_intro_btn_jump">Saltar</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="no_internet">No hay Conexión</string>
    <string name="no_data">¡ Crea tu primer Post!</string>
    <string name="user_name">Nombre de Usuario</string>
    <string name="forgot_password">¿ Olvidaste la contraseña?</string>
    <string name="password">Contraseña</string>
    <string name="login_in">Iniciar Sesión</string>
    <string name="sign_in">Registrarse</string>
    <string name="email_address">Dirección de Email</string>
    <string name="retype_password">Repetir Contraseña</string>
    <string name="register">Registro</string>
    <string name="msg_register">¿ Ya eres miembro? Inicia sesión aquí</string>
    <string name="position">Tercera Base / Bateador</string>
    <string name="call">Llamar</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="view_profile">Ver Perfil</string>
    <string name="points">Puntos</string>
    <string name="homerun">Homerun</string>
</resources>
