<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/register_activity_image_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:tint="@color/colorWhite"
        android:src="@drawable/ic_baseball_intro2"/>
    <LinearLayout
        android:layout_below="@id/register_activity_image_view"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20dp"
            android:textColor="@color/textColorLight"
            android:textStyle="bold"></TextView>
        <EditText
            style="@style/RegisterActivityText"
            android:hint="@string/user_name"/>
        <EditText
            style="@style/RegisterActivityText"
            android:hint="@string/email_address"/>
        <EditText
            style="@style/RegisterActivityText"
            android:hint="@string/password"
            android:inputType="textPassword"/>
        <EditText
            style="@style/RegisterActivityText"
            android:hint="@string/retype_password"/>

        <Button
            android:id="@+id/register_activity_button_sign_up"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            android:background="@drawable/gradient_button_ligth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_activity_login"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:text="@string/msg_register"
        android:layout_marginBottom="16dp"/>

</RelativeLayout>