<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:layout_gravity="center"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:src="@drawable/man_profile"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textStyle="bold"
            android:text="Javier Hernandez"
            android:layout_gravity="center"
            android:textColor="@color/textColorLight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/position"
            android:layout_gravity="center"
            android:textColor="@color/textColorLight"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="100dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/colorGreen"
                android:layout_height="80dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseball_intro1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/points"
                    android:textStyle="bold"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="12"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/colorBlue"
                android:layout_height="80dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseball_intro2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/homerun"
                    android:textStyle="bold"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="12"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_view_profile"
        android:layout_gravity="center"
        android:text="@string/view_profile"
        android:background="@drawable/gradient_button_ligth"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alert_dialog_close"
        android:textStyle="bold"
        android:text="@string/close"
        android:paddingTop="8dp"
        android:textColor="@color/textColorLight"
        android:layout_gravity="right"/>

</LinearLayout>