<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/login2_activity_image_view"
        android:layout_width="100dp"
        android:src="@drawable/ic_baseball_intro2"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:layout_height="100dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24dp"
        android:textColor="@color/textColorLight"
        android:id="@+id/login2_activity_text_view"
        android:layout_centerHorizontal="true"
        android:text="BaseballUI"
        android:textStyle="bold"
        android:layout_below="@id/login2_activity_image_view"/>
    
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_above="@id/login2_activity_text_view_forgot"
        android:layout_marginTop="16dp"
        android:id="@+id/login2_activity_card_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:layout_above="@id/login2_activity_text_view_forgot">

        <EditText
            android:hint="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person_login"
            android:inputType="textEmailAddress"
            android:drawablePadding="8dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite"></View>
        <EditText
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_login"
            android:inputType="textPassword"
            android:drawablePadding="8dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite"></View>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login2_activity_button_login"
            android:text="@string/login_in"
            android:textColor="@color/textColorLight"
            android:background="@drawable/gradient_button_primary"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login2_activity_button_signin"
            android:text="@string/sign_in"
            android:textColor="@color/textColorLight"
            android:background="@drawable/gradient_button_signup"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"/>

    </LinearLayout>
</android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password"
        android:textColor="@color/textColorLight"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/login2_activity_text_view_forgot"/>

</RelativeLayout>