<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="280dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/gradient">
        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:id="@+id/circle_image_activity_profile"
            android:src="@drawable/man_profile"/>
        <TextView
            android:id="@+id/text_view_name_profile_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/circle_image_activity_profile"
            android:layout_marginTop="8dp"
            android:text="Javier Gonzalez"
            android:textColor="@color/textColorLight"
            android:textStyle="bold"
            android:textSize="16dp"/>
        <TextView
            android:id="@+id/text_view_position_profile_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text_view_name_profile_activity"
            android:layout_marginTop="8dp"
            android:text="@string/position"
            android:textColor="@color/textColorLight"
            android:textStyle="bold"
            android:textSize="24dp"/>
        
        <android.support.v7.widget.CardView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_below="@id/text_view_position_profile_activity"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dorsal"
                        android:textSize="14dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="23"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Edad"
                        android:textSize="14dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="30"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_height="match_parent"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Salario"
                        android:textSize="14dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="10M"
                        android:textSize="20dp"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="60dp">
        <ImageView
            android:tint="@color/colorAccentDark"
            android:src="@drawable/ic_baseball_intro1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="8dp"
            android:text="HomeRun 3000"
            android:textStyle="bold|italic"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="60dp">
        <ImageView
            android:tint="@color/colorAccentDark"
            android:src="@drawable/ic_baseball_intro2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="8dp"
            android:text="Run 139"
            android:textStyle="bold|italic"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:background="@drawable/gradient_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:background="@drawable/gradient_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:background="@drawable/gradient_button"/>
    </LinearLayout>
</LinearLayout>